# agents

1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  app.py  deploy.ps1
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  4_lab4.ipynb
3_crew/coder_v1/: README.md  pyproject.toml  series_output.txt
3_crew/coder_v1/output/: code_and_output.txt
3_crew/coder_v1/src/coder_v1/: crew.py  main.py
3_crew/debate_v1/: README.md  pyproject.toml
3_crew/debate_v1/knowledge/: user_preference.txt
3_crew/debate_v1/output/: decide.md  oppose.md  propose.md
3_crew/debate_v1/src/debate_v1/: main.py
3_crew/engineering_team_v1/: README.md  pyproject.toml
3_crew/engineering_team_v1/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
3_crew/engineering_team_v1/src/engineering_team_v1/: main.py
3_crew/engineering_team_v1/src/engineering_team_v1/config/: agents.yaml
3_crew/financial_researcher_v1/: README.md  pyproject.toml
3_crew/financial_researcher_v1/output/: report.md
3_crew/financial_researcher_v1/src/financial_researcher_v1/: crew.py  main.py  main_old.py
3_crew/stock_picker_v1/: README.md  pyproject.toml
3_crew/stock_picker_v1/memory/: chroma.sqlite3  long_term_memory_storage.db
3_crew/stock_picker_v1/output/: decision.md  research_report.json  trending_companies.json
3_crew/stock_picker_v1/src/stock_picker_v1/: crew.py  crew_v1.py  main.py
4_langgraph/: 1_lab1.ipynb
