[project]
name = "coder_v1"
version = "0.1.0"
description = "coder_v1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
coder_v1 = "coder_v1.main:run"
run_crew = "coder_v1.main:run"
train = "coder_v1.main:train"
replay = "coder_v1.main:replay"
test = "coder_v1.main:test"
run_with_trigger = "coder_v1.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
