[project]
name = "engineering_team_v1"
version = "0.1.0"
description = "engineering_team_v1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "gradio>=6.8.0",
]

[project.scripts]
engineering_team_v1 = "engineering_team_v1.main:run"
run_crew = "engineering_team_v1.main:run"
train = "engineering_team_v1.main:train"
replay = "engineering_team_v1.main:replay"
test = "engineering_team_v1.main:test"
run_with_trigger = "engineering_team_v1.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
