[project]
name = "financial_researcher_v1"
version = "0.1.0"
description = "financial_researcher_v1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
financial_researcher_v1 = "financial_researcher_v1.main:run"
run_crew = "financial_researcher_v1.main:run"
train = "financial_researcher_v1.main:train"
replay = "financial_researcher_v1.main:replay"
test = "financial_researcher_v1.main:test"
run_with_trigger = "financial_researcher_v1.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
