[project]
name = "stock_picker_v1"
version = "0.1.0"
description = "stock_picker_v1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
stock_picker_v1 = "stock_picker_v1.main:run"
run_crew = "stock_picker_v1.main:run"
train = "stock_picker_v1.main:train"
replay = "stock_picker_v1.main:replay"
test = "stock_picker_v1.main:test"
run_with_trigger = "stock_picker_v1.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
